--- a/Developer Plus/login.html
+++ b/Developer Plus/login.html
@@ -11,6 +11,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span onClick="location.href='/index.html'">Developer Plus</span>
+        <br>
         </div>
     </div>
     <header class="welcome-header">
@@ -25,7 +26,7 @@
         <input type="password" placeholder="Password" required>
         <input type="submit" value="Sign In">
         <button type="button" onClick="location.href='/signup.html'"><i class="fas fa-comment fa-1x"></i>카카오계정으로 로그인</button>
-        <a href="#">Developer Plus Sign UP</a>
+        <a href="/signup.html">Developer Plus Sign Up</a>
     </form>
 
 
