--- a/Developer Plus/index.html
+++ b/Developer Plus/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Developer Plus</title>
+    <title>Developer Plus</title>
   </head>
   <body>
     <div class="screen-header">
@@ -14,12 +14,18 @@
         <ul>
           <li>개발자보기</li>
           <li>개발자모집</li>
-          <li>정보</li>
-          <li>검색</li>
+          <li>스토리</li>
+          <li><i class="fas fa-search"></i>검색</li>
         </ul>
       </div>
       <div class="screen-header__sub_menu">
+        <span><i class="far fa-user-circle fa-lg"></i></span>
+        <span>|</span>
         <span>로그인/회원가입</span>
     </div>
+    <script
+    src="http://kit.fontawesome.com/6478f529f2.js"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
