--- a/Developer Plus/login.html
+++ b/Developer Plus/login.html
@@ -28,15 +28,17 @@
         <button type="button" onClick="location.href='/kakao.html'"><i class="fas fa-comment fa-1x"></i>카카오계정으로 로그인</button>
     </form>
     <input type="checkbox" id="popup">
+
         <label for="popup">Developer Plus Sign Up</label>
+
         <div>
           <div>
             <form action="/index.html" method="post"id="signup">
               <span>회원가입</span>
-              <input type="email" placeholder="Email" required>
-              <input type="password" placeholder="Password" required>
-              <input type="password" placeholder = "비밀번호를 다시 입력해 주세요." required><br>
-          <button type="button" >Sign Up</button>
+              <input type="email" placeholder="Enter your email address" required>
+              <input type="password" placeholder="Enter your password" required>
+              <input type="password" placeholder = "Confirm your password" required><br>
+          <button type="button" onclick= "location.href='/login.html'" >Sign Up</button>
             </form>   
           </div>
           <label for="popup"></label>
