--- a/Idivisual Work/NYJ/board_write.html
+++ b/Idivisual Work/NYJ/board_write.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js"></script>
-    <script src="js/summernote.js"></script>
+    <script src="board/js/summernote.js"></script>
   </head>
   <body>
     <div id="summernote"></div>
