--- a/Idivisual Work/LYH/demo/src/main/resources/static/topview.html
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/topview.html
@@ -21,14 +21,13 @@
           <li class="dropdown">
             <div class="dropdown-menu"><i class="fas fa-search"></i>검색</div>
           </li>
-          <li class="profile">
-            <div>
-              <span>
-                <a href="/proflie.html"
-                  ><i class="far fa-user-circle fa-lg"></i
-                ></a>
-              </span>
+          <li class="dropdown">
+            <div class="dropdown-menu">
+              <a href="/proflie.html"
+                ><i class="far fa-user-circle fa-lg"></i
+              ></a>
             </div>
+          </li>
           </li>
           <li class="home">
             <div>
