--- a/Idivisual Work/NYJ/board.html
+++ b/Idivisual Work/NYJ/board.html
@@ -46,11 +46,43 @@
     <div class="filter">
         <span class="ft_place">지역</span>
         <ul class="hidden">
-            <li><a href="#">서울</a></li>
-            <li><a href="#">부산</a></li>
-            <li><a href="#">인천</a></li>
-            <li><a href="#">경기</a></li>
-            <li><a href="#">대구</a></li>
+            <li><a href="#">서울특별시</a></li>
+            <li><a href="#">부산광역시</a></li>
+            <li><a href="#">인천광역시</a></li>
+            <li><a href="#">대구광역시</a></li>
+            <li><a href="#">광주광역시</a></li>
+            <li><a href="#">대전광역시</a></li>
+            <li><a href="#">울산광역시</a></li>
+            <li><a href="#">세종시</a></li>
+            <li><a href="#">경기도</a></li>
+            <li><a href="#">강원도</a></li>
+            <li><a href="#">충청남도</a></li>
+            <li><a href="#">충청북도</a></li>
+            <li><a href="#">경상북도</a></li>
+            <li><a href="#">경상남도</a></li>
+            <li><a href="#">전라북도</a></li>
+            <li><a href="#">전라남도</a></li>
+            <li><a href="#">제주도</a></li>
+        </ul>
+
+        <span class="ft_job">직무</span>
+          <ul class="hidden">
+            <li><a href="#">Planner</a></li>
+            <li><a href="#">Designer</a></li>
+            <li><a href="#">Developer</a></li>
+            <li><a href="#">ETC</a></li>
+        </ul>
+
+        <span class="ft_career">경력</span>
+          <ul class="hidden">
+            <li><a href="#">신입</a></li>
+            <li><a href="#">1~2년차</a></li>
+            <li><a href="#">3~4년차</a></li>
+            <li><a href="#">5년차 이상</a></li>
+            <li><a href="#">10년차 이상</a></li>
+            <li><a href="#">경력무관</a></li>
         </ul>
     </div>
+
+    
 </html>
