--- a/Idivisual Work/NYJ/board.html
+++ b/Idivisual Work/NYJ/board.html
@@ -44,45 +44,55 @@
     </script>
 
     <div class="filter">
-        <span class="ft_place">지역</span>
-        <ul class="hidden">
-            <li><a href="#">서울특별시</a></li>
-            <li><a href="#">부산광역시</a></li>
-            <li><a href="#">인천광역시</a></li>
-            <li><a href="#">대구광역시</a></li>
-            <li><a href="#">광주광역시</a></li>
-            <li><a href="#">대전광역시</a></li>
-            <li><a href="#">울산광역시</a></li>
-            <li><a href="#">세종시</a></li>
-            <li><a href="#">경기도</a></li>
-            <li><a href="#">강원도</a></li>
-            <li><a href="#">충청남도</a></li>
-            <li><a href="#">충청북도</a></li>
-            <li><a href="#">경상북도</a></li>
-            <li><a href="#">경상남도</a></li>
-            <li><a href="#">전라북도</a></li>
-            <li><a href="#">전라남도</a></li>
-            <li><a href="#">제주도</a></li>
-        </ul>
+      <span class="ft_place">지역
+        <div class="ft_selectbox">
+           <ul>
+            <li class>서울특별시</li>
+            <li class>부산광역시</li>
+            <li class>인천광역시</li>
+            <li class>대구광역시</li>
+            <li class>광주광역시</li>
+            <li class>대전광역시</li>
+            <li class>울산광역시</li>
+            <li class>세종시</li>
+            <li class>경기도</li>
+            <li class>강원도</li>
+            <li class>충청남도</li>
+            <li class>충청북도</li>
+            <li class>경상북도</li>
+            <li class>경상남도</li>
+            <li class>전라북도</li>
+            <li class>전라남도></li>
+            <li class>제주도</li>
+          </ul>
+        </div>
+      </span>
 
-        <span class="ft_job">직무</span>
-          <ul class="hidden">
-            <li><a href="#">Planner</a></li>
-            <li><a href="#">Designer</a></li>
-            <li><a href="#">Developer</a></li>
-            <li><a href="#">ETC</a></li>
-        </ul>
+      <span class="ft_job">직무
+        <div class="ft_selectbox">
+          <ul>
+            <li class>Planner</li>
+            <li class>Designer</li>
+            <li class>Developer</li>
+            <li class>ETC</li>
+          </ul>
+        </div>
+      </span>
 
-        <span class="ft_career">경력</span>
-          <ul class="hidden">
-            <li><a href="#">신입</a></li>
-            <li><a href="#">1~2년차</a></li>
-            <li><a href="#">3~4년차</a></li>
-            <li><a href="#">5년차 이상</a></li>
-            <li><a href="#">10년차 이상</a></li>
-            <li><a href="#">경력무관</a></li>
-        </ul>
+      <span class="ft_career">경력
+        <div class="ft_selectbox">
+          <ul>
+            <li class>신입</li>
+            <li class>1~2년차</li>
+            <li class>3~4년차</li>
+            <li class>5년차 이상</li>
+            <li class>10년차 이상</li>
+            <li class>경력무관</li>
+          </ul>
+        </div>
+      </span>
     </div>
 
-    
+
+  </body>
 </html>
