--- a/Idivisual Work/LYH/demo/src/main/resources/static/topview.html
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/topview.html
@@ -1,45 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Developer Plus</title>
-  </head>
-  <body>
-    <div class="header">
-      <nav>
-        <div class="title"><a href="/index.html">Developer Plus</a></div>
-        <ul>
-          <li class="dropdown">
-            <div class="dropdown-menu">개발자 보기</div>
-          </li>
-          <li class="dropdown">
-            <div class="dropdown-menu">개발자 모집</div>
-          </li>
-          <li class="dropdown">
-            <div class="dropdown-menu">스토리</div>
-          </li>
-          <li class="dropdown">
-            <div class="dropdown-menu"><i class="fas fa-search"></i>검색</div>
-          </li>
-          <li class="dropdown">
-            <div class="dropdown-menu">
-              <a href="/proflie.html"
-                ><i class="far fa-user-circle fa-lg"></i
-              ></a>
-            </div>
-          </li>
-          </li>
-          <li class="home">
-            <div>
-              <span><a href="/login.html">로그인/회원가입</a></span>
-            </div>
-          </li>
-        </ul>
-      </nav>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/screen/topview.css" />
+</head>
+<body>
+    <div class="topview-background">
+        <div class="topview-row">
+            <div class="topview-title"><a href="/index.html">Developer Plus</a></div>
+        </div>
+        <div class="topview-reverserow">
+            <div class="topview-dropdown-menu">로그인</div>
+            <div class="topview-dropdown-menu"><a href="/result.html">검색</a></div>
+            <div class="topview-dropdown-menu">스토리</div>
+            <div class="topview-dropdown-menu">개발자 모집</div>
+            <div class="topview-dropdown-menu">개발자 찾기</div>
+        </div>
     </div>
-    <script
-      src="http://kit.fontawesome.com/6478f529f2.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+</body>
 </html>
