--- a/Idivisual Work/NYJ/board.html
+++ b/Idivisual Work/NYJ/board.html
@@ -40,8 +40,7 @@
     </div>
     <script
       src="http://kit.fontawesome.com/6478f529f2.js"
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"></script>
 
     <div class="filter">
       <span class="ft_place">지역
@@ -62,7 +61,7 @@
             <li class>경상북도</li>
             <li class>경상남도</li>
             <li class>전라북도</li>
-            <li class>전라남도></li>
+            <li class>전라남도</li>
             <li class>제주도</li>
           </ul>
         </div>
@@ -93,6 +92,21 @@
       </span>
     </div>
 
+    <div class="main">
 
+      <span>
+        <div class>
+          <div class="thumbnail">
+            <a href=""></a>
+          </div>
+          <div class="contents">
+            <div class="title"></div>
+            <div class="username"></div>
+            <div class=""></div>
+            <div class=""></div>
+          </div>
+        </div>
+    </span>
+    </div>
   </body>
 </html>
