--- a/Idivisual Work/LYH/demo/src/main/resources/static/topview.html
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/topview.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/screen/topview.css" />
+    <link href="css/screen/common.css"  rel="stylesheet">
+    <link href="css/screen/topview.css"  rel="stylesheet">
+    <title>topview</title>
 </head>
 <body>
-    <div class="topview-background">
-        <div class="topview-row">
-            <div class="topview-title"><a href="/index.html">Developer Plus</a></div>
+    <header>
+        <div class="topview-background common-bottomline">
+            <div class="topview-row">
+                <div class="topview-title"><a href="index.html">Developer Plus</a></div>
+            </div>
+            <div class="topview-reverserow">
+                <div class="topview-dropdown-menu"><a href="login.html">로그인</a></div>
+                <div class="topview-dropdown-menu"><a href="profile.html">(임시)프로필</a></div>
+                <div class="topview-dropdown-menu"><a href="search.html">(임시)검색</a></div>
+                <div class="topview-dropdown-menu"><a href="story.html">스토리</a></div>
+                <div class="topview-dropdown-menu"><a href="finddeveloper.html">개발자 모집</a></div>
+                <div class="topview-dropdown-menu"><a href="recdeveloper.html">개발자 찾기</a></div>
+            </div>
         </div>
-        <div class="topview-reverserow">
-            <div class="topview-dropdown-menu">로그인</div>
-            <div class="topview-dropdown-menu"><a href="/result.html">검색</a></div>
-            <div class="topview-dropdown-menu">스토리</div>
-            <div class="topview-dropdown-menu">개발자 모집</div>
-            <div class="topview-dropdown-menu">개발자 찾기</div>
-        </div>
-    </div>
+    </header>
 </body>
 </html>
