--- a/Developer Plus/status-bar.html
+++ b/Developer Plus/status-bar.html
@@ -19,10 +19,7 @@
             <div class="dropdown-menu">스토리</div>
           </li>
           <li class="dropdown">
-            <div></div>
-            <div class="dropdown-menu">
-              <input /> <i class="fas fa-search"></i>
-            </div>
+            <div class="dropdown-menu"><i class="fas fa-search"></i>검색</div>
           </li>
           <li class="dropdown">
             <div class="dropdown-menu">
