--- a/Developer Plus/login.html
+++ b/Developer Plus/login.html
@@ -34,6 +34,7 @@
           <div>
             <form action="/index.html" method="post"id="signup">
               <span>회원가입</span>
+              <input type="text" placeholder="Enter your name" required>
               <input type="email" placeholder="Enter your email address" required>
               <input type="password" placeholder="Enter your password" required>
               <input type="password" placeholder = "Confirm your password" required><br>
@@ -47,6 +48,7 @@
         crossorigin="anonymous"
       >
     </script>
+    <script src="/js/login.js"></script>
     </div>
   </body>
 </html>
