--- a/Developer Plus/topbar.html
+++ b/Developer Plus/topbar.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/screen/common.css"  rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/screen/common.css" rel="stylesheet" />
     <link href="css/screen/topbar.css" rel="stylesheet" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="topbar-background common-bottomline">
+      <div class="topbar-first-filter">sd</div>
+      <div class="top-bar-find">
+        <a href="recdeveloperinner.html">개발자 모집하기</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
