--- a/Developer Plus/index.html
+++ b/Developer Plus/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link href="css/screen/common.css" rel="stylesheet" />
     <link href="css/screen/main.css" rel="stylesheet" />
     <title>Developer Plus</title>
@@ -15,12 +14,20 @@
     </header>
     <section>
       <div class="main-panel">
-        <!-- 여기에 버튼 -->
+        <img src="img/2.jpg" />
+        <div class="btn">
+          <button
+            onclick="location.href='finddeveloper.html'"
+            type="button"
+            class="myButton"
+          >
+            시작하기
+          </button>
+        </div>
+
+        <!-- 여기에     버튼 -->
       </div>
     </section>
-    <footer>
-      <div id="footer"></div>
-    </footer>
 
     <script>
       async function fetchHtmlAsText(url) {
@@ -36,5 +43,10 @@
       importPage('topview');
       importPage('footer');
     </script>
+    <script
+      src="https://kit.fontawesome.com/a91a455094.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
