--- a/Developer Plus/topview.html
+++ b/Developer Plus/topview.html
@@ -17,19 +17,12 @@
         <ul>
           <li class="dropdown">
             <div class="topview-dropdown-menu">
-              <a href="login.html">로그인/회뭔가입</a>
+              <a href="finddeveloper.html">개발자 찾기</a>
             </div>
           </li>
           <li class="dropdown">
             <div class="topview-dropdown-menu">
-              <a href="profile.html">(임시)프로필</a>
-            </div>
-          </li>
-          <li class="dropdown">
-            <div class="topview-dropdown-menu">
-              <a href="search.html"
-                ><i class="fa-solid fa-magnifying-glass"></i>검색</a
-              >
+              <a href="recdeveloper.html">개발자 모집</a>
             </div>
           </li>
           <li class="dropdown">
@@ -39,19 +32,24 @@
           </li>
           <li class="dropdown">
             <div class="topview-dropdown-menu">
-              <a href="finddeveloper.html">개발자 모집</a>
+              <a href="search.html"><i class="fas fa-search"></i>검색</a>
             </div>
           </li>
           <li class="dropdown">
             <div class="topview-dropdown-menu">
-              <a href="recdeveloper.html">개발자 찾기</a>
+              <a href="profile.html"><i class="fal fa-user-circle fa"></i></a>
+            </div>
+          </li>
+          <li class="dropdown">
+            <div class="topview-dropdown-menu">
+              <a href="login.html">로그인/회원가입</a>
             </div>
           </li>
         </ul>
       </div>
     </header>
     <script
-      src="http://kit.fontawesome.com/6478f529f2.js"
+      src="https://kit.fontawesome.com/a91a455094.js"
       crossorigin="anonymous"
     ></script>
   </body>
