--- a/Idivisual Work/NYJ/board.html
+++ b/Idivisual Work/NYJ/board.html
@@ -38,14 +38,12 @@
         </ul>
       </nav>
     </div>
-    <script
-      src="http://kit.fontawesome.com/6478f529f2.js"
-      crossorigin="anonymous"></script>
-
+    
     <div class="filter">
-      <span class="ft_place">지역
+      <span class="ft_place"
+        >지역
         <div class="ft_selectbox">
-           <ul>
+          <ul>
             <li class>서울특별시</li>
             <li class>부산광역시</li>
             <li class>인천광역시</li>
@@ -67,7 +65,8 @@
         </div>
       </span>
 
-      <span class="ft_job">직무
+      <span class="ft_job"
+        >직무
         <div class="ft_selectbox">
           <ul>
             <li class>Planner</li>
@@ -78,7 +77,8 @@
         </div>
       </span>
 
-      <span class="ft_career">경력
+      <span class="ft_career"
+        >경력
         <div class="ft_selectbox">
           <ul>
             <li class>신입</li>
@@ -93,20 +93,89 @@
     </div>
 
     <div class="main">
-
-      <span>
-        <div class>
-          <div class="thumbnail">
-            <a href=""></a>
-          </div>
-          <div class="contents">
-            <div class="title"></div>
-            <div class="username"></div>
-            <div class=""></div>
-            <div class=""></div>
+        <div class="card">
+          <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
+          <div class="card_contents">
+            <div class="card_title">제목입니다.</div>
+            <div class="card_user">작성자입니다.</div>
+            <div class="card_text">내용입니다.</div>
+            <div class="card_upload_time">올린 시각입니다.</div>
           </div>
         </div>
-    </span>
+
+        <div class="card">
+          <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
+          <div class="card_contents">
+            <div class="card_title">제목입니다.</div>
+            <div class="card_user">작성자입니다.</div>
+            <div class="card_text">내용입니다.</div>
+            <div class="card_upload_time">올린 시각입니다.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
+          <div class="card_contents">
+            <div class="card_title">제목입니다.</div>
+            <div class="card_user">작성자입니다.</div>
+            <div class="card_text">내용입니다.</div>
+            <div class="card_upload_time">올린 시각입니다.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
+          <div class="card_contents">
+            <div class="card_title">제목입니다.</div>
+            <div class="card_user">작성자입니다.</div>
+            <div class="card_text">내용입니다.</div>
+            <div class="card_upload_time">올린 시각입니다.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
+          <div class="card_contents">
+            <div class="card_title">제목입니다.</div>
+            <div class="card_user">작성자입니다.</div>
+            <div class="card_text">내용입니다.</div>
+            <div class="card_upload_time">올린 시각입니다.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
+          <div class="card_contents">
+            <div class="card_title">제목입니다.</div>
+            <div class="card_user">작성자입니다.</div>
+            <div class="card_text">내용입니다.</div>
+            <div class="card_upload_time">올린 시각입니다.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
+          <div class="card_contents">
+            <div class="card_title">제목입니다.</div>
+            <div class="card_user">작성자입니다.</div>
+            <div class="card_text">내용입니다.</div>
+            <div class="card_upload_time">올린 시각입니다.</div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
+          <div class="card_contents">
+            <div class="card_title">제목입니다.</div>
+            <div class="card_user">작성자입니다.</div>
+            <div class="card_text">내용입니다.</div>
+            <div class="card_upload_time">올린 시각입니다.</div>
+          </div>
+        </div>
     </div>
+
+  <script src="http://kit.fontawesome.com/6478f529f2.js"
+    crossorigin="anonymous">
+  </script>
   </body>
 </html>
