프로필 페이지

--- a/Developer Plus/login.html
+++ b/Developer Plus/login.html
@@ -35,9 +35,9 @@
             <form action="/index.html" method="post"id="signup">
               <span>회원가입</span>
               <input type="text" placeholder="Enter your name" required>
+              <input type="text" placeholder = "Enter your ID" required>
               <input type="email" placeholder="Enter your email address" required>
               <input type="password" placeholder="Enter your password" required>
-              <input type="password" placeholder = "Confirm your password" required><br>
           <button type="button" onclick= "location.href='/login.html'" >Sign Up</button>
             </form>   
           </div>
