--- a/Idivisual Work/LYH/demo/src/main/resources/static/topview.html
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/topview.html
@@ -17,12 +17,12 @@
         <ul>
           <li class="dropdown">
             <div class="topview-dropdown-menu">
-              <a href="recdeveloper.html">개발자 찾기</a>
+              <a href="finddeveloper.html">개발자 찾기</a>
             </div>
           </li>
           <li class="dropdown">
             <div class="topview-dropdown-menu">
-              <a href="finddeveloper.html">개발자 모집</a>
+              <a href="recdeveloper.html">개발자 모집</a>
             </div>
           </li>
           <li class="dropdown">
