--- a/Idivisual Work/LYH/demo/src/main/resources/static/index.html
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/index.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/screen/common.css"  rel="stylesheet">
-    <link href="css/screen/main.css"  rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/screen/common.css" rel="stylesheet" />
+    <link href="css/screen/main.css" rel="stylesheet" />
     <title>Developer Plus</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div id="topview"></div>
+      <div id="topview"></div>
     </header>
     <section>
-        <div class="main-panel">
-            <!-- 여기에 버튼 -->
+      <div class="main-panel">
+        <img src="img/2.jpg" />
+        <div class="btn">
+          <button
+            onclick="location.href='finddeveloper.html'"
+            type="button"
+            class="myButton"
+          >
+            시작하기
+          </button>
         </div>
+      </div>
     </section>
-    <footer>
-        <div id="footer"></div>
-    </footer>
 
     <script>
-        async function fetchHtmlAsText(url) {
-            return await (await fetch(url)).text();
-        }
-      
-        async function importPage(target) {
-            document.querySelector('#' + target).innerHTML = await fetchHtmlAsText(target + '.html');
-        }
-  
-        importPage("topview");
-        importPage("footer");
+      async function fetchHtmlAsText(url) {
+        return await (await fetch(url)).text();
+      }
+
+      async function importPage(target) {
+        document.querySelector('#' + target).innerHTML = await fetchHtmlAsText(
+          target + '.html'
+        );
+      }
+
+      importPage('topview');
     </script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/a91a455094.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/background.js"></script>
+  </body>
 </html>
