--- a/Idivisual Work/LYH/demo/src/main/resources/static/chat.html
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/chat.html
@@ -18,7 +18,7 @@
         <div class="chat-mainpanel" class="chat-divrow">
           <div class="chat-div60 linebox-right"><p class="placeholder sort-center">여기에 캘린더</p></div>
           <div class="chat-div40 chat-divcol">
-            <div class="chat-div20 linebox-bottom"><p class="placeholder sort-center">여기에 공지 배너</p></div>
+            <div class="chat-div20 linebox-bottom"></div>
             <div class="chat-div80 chat-divrow">
               <div class="chat-div85 linebox-right"><p class="placeholder sort-center">여기에 채팅</p></div>
               <div class="chat-div15 chat-divcol" style="flex: 1 0 auto;">
