--- a/Idivisual Work/LYH/demo/src/main/resources/static/profile.html
+++ b/Idivisual Work/LYH/demo/src/main/resources/static/profile.html
@@ -58,7 +58,7 @@
                 <img
                   src="https://avatars.githubusercontent.com/u/103355252?s=96&v=4"
                 />
-                <div class="mychat">나와의 채팅</div>
+                <div class="mychat"><a href="chat.html">나와의 채팅</a></div>
               </div>
             </button>
             <button>add</button>
