--- a/Idivisual Work/NYJ/board.html
+++ b/Idivisual Work/NYJ/board.html
@@ -106,39 +106,39 @@
         <div class="card">
           <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
           <div class="card_contents">
-            <div class="card_title">제목입니다.</div>
-            <div class="card_user">작성자입니다.</div>
-            <div class="card_text">내용입니다.</div>
-            <div class="card_upload_time">올린 시각입니다.</div>
+            <div class="card_title">대충 스타트업 한다는 제목</div>
+            <div class="card_user">나윤재</div>
+            <div class="card_text">대충 어떤 내용인지 써져있음</div>
+            <div class="card_upload_time">1시간 전</div>
           </div>
         </div>
 
         <div class="card">
           <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
           <div class="card_contents">
-            <div class="card_title">제목입니다.</div>
-            <div class="card_user">작성자입니다.</div>
-            <div class="card_text">내용입니다.</div>
-            <div class="card_upload_time">올린 시각입니다.</div>
+            <div class="card_title">스타트업 팀빌딩 플렛폼</div>
+            <div class="card_user">박용호</div>
+            <div class="card_text">백엔드 개발자, UI디자이너 구함@@@@@@@</div>
+            <div class="card_upload_time">2시간 전</div>
           </div>
         </div>
 
         <div class="card">
           <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
           <div class="card_contents">
-            <div class="card_title">제목입니다.</div>
-            <div class="card_user">작성자입니다.</div>
-            <div class="card_text">내용입니다.</div>
-            <div class="card_upload_time">올린 시각입니다.</div>
+            <div class="card_title">메타버스 커뮤니티 플랫폼</div>
+            <div class="card_user">메타포스트</div>
+            <div class="card_text">블록체인/초기 개발 단계/현재 구성원 3명/서울특별시 강남구</div>
+            <div class="card_upload_time">2023.04.02</div>
           </div>
         </div>
 
         <div class="card">
           <img class="card_thumbnail" src="https://cdn.klnews.co.kr/news/photo/202112/303250_43445_1345.jpg">
           <div class="card_contents">
-            <div class="card_title">제목입니다.</div>
-            <div class="card_user">작성자입니다.</div>
-            <div class="card_text">내용입니다.</div>
+            <div class="card_title">대충엄청나게긴제목대충엄청나게긴제목대충엄청나게긴제목</div>
+            <div class="card_user">작성자</div>
+            <div class="card_text">대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용대충엄청나게긴내용</div>
             <div class="card_upload_time">올린 시각입니다.</div>
           </div>
         </div>
